@@ -1,0 +1,22 @@
+ <!--
+ The test cases have been taken from the robustness improvement project
+ funded by the Bavarian State Ministry of Agriculture and Forestry
+ (StMLF) and the State Survey of Bavaria (LVG). Written permission
+ to use the data for tests has been given by email on the 22 Nov 2006.
+ -->
+
+ <run><precisionModel type="FLOATING"/>
+
+ <case><desc>3440675 - 39440
+abs( area(A) - difference(A,B) - intersection(A,B) ) = -12  </desc>
+<a>
+01060000000100000001030000000100000010000000ABE5901B9F04514172F97207369854418AE1115E9B0451413A1E1606379854412FC8508A96045141574FB94E38985441D7A3701D940451413D0AD7F3389854419A99995994045141333333F33A985441EC51B81E94045141000000003F985441713D0A6799045141666666763F985441CDCCCCEC9D045141F6285C1F3F9854419A9999C9A3045141EC51B8DE3D985441666666E6AE0451411F85EBB13A985441E17A142EB8045141AE47E1CA36985441333333A3B50451419A999909309854411948A539AD045141A264514632985441BAB6FD20A904514187AD325D33985441B88E923AA6045141C428A32234985441ABE5901B9F04514172F9720736985441
+</a>
+
+<b>
+01060000000100000001030000000100000011000000D7A3701D940451413D0AD7F33898544178DBFF36940451412E6318CD399854413579ED179A045141A0FF7BA5389854414304D81EA004514159B9FE6C3798544169437462A504514119BA06A235985441C01AAF28AB04514110CF31A333985441089AA624AF045141250D45D63298544191CD99DAB1045141B3DFA81232985441A5696F63B60451416745560832985441333333A3B50451419A999909309854411948A539AD045141A264514632985441BAB6FD20A904514187AD325D33985441B88E923AA6045141C428A32234985441ABE5901B9F04514172F97207369854418AE1115E9B0451413A1E1606379854412FC8508A96045141574FB94E38985441D7A3701D940451413D0AD7F338985441
+</b>
+<test><op name="areatest">5</op></test>
+</case>
+
+</run>
